--- a/Styles/style.css
+++ b/Styles/style.css
@@ -133,6 +133,19 @@ p{
     width: 90%;
 }
 
+#CVpopup {
+    border: none;
+    font-size: 24px;
+    color: blue;
+    background-color: #d0ecf0;
+    padding-left: 20%;
+}
+
+#CVpopup:hover {
+    font-weight: 700;
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 768px) {
 
     #container {
