--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,7 +12,7 @@
 
 body {
     background-color:#d0ecf0 ;
-    background-image: url("/Images/63507.jpg");
+    /* background-image: url("/Images/63507.jpg"); */
 
 }
 header {
