--- a/Styles/style.css
+++ b/Styles/style.css
@@ -203,6 +203,7 @@ p{
     border-width: 5px;
     border-radius: 10px;
     box-shadow: lightslategrey 0px 5px 5px 0px;
+    transition: all 2s;
 }
 
 #CVpopup:hover {
