--- a/Styles/style.css
+++ b/Styles/style.css
@@ -152,7 +152,7 @@ main{
     align-items: center;
 }
 
-h1{
+#MyName {
     position: relative;
     line-height: 180px;
     font-size: 100px;
@@ -161,7 +161,7 @@ h1{
     padding: 10px 20px 20px 10px;
 }
 
-h2{
+#Jobdescription {
     position: absolute;
     transform: translate(25%, -300%);
     font-size: 30px;
@@ -251,6 +251,10 @@ footer {
     padding: 1.2rem;
 }
 
+h2 {
+    text-align: center;
+}
+
 h5 {
     text-align: center;
 }
@@ -261,7 +265,7 @@ h5 {
         flex-direction: row-reverse;
     }
 
-    h2 {
+    #Jobdescription {
         font-size: 50px;
         transform: translate(30%, -222%);
     }
