--- a/Styles/style.css
+++ b/Styles/style.css
@@ -274,6 +274,69 @@ h2, h3, h4, h5 {
     text-align: center;
 }
 
+.hardskills {
+    max-width: 98%;
+    padding: 5px;
+    padding-left: 0%;
+}
+
+.hardskills li {
+    background-color: var(--color-gray);
+    color: var(--color-white);
+    margin: 5px;
+    border-radius: 15px;
+    border: 1px solid var(--color-black);
+}
+
+.skills {
+    background-color: var(--color-light-green2);
+    color: var(--color-secondary);
+    width: 0%; /*To be set by Javascript */
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 15px;
+}
+
+.html, .sql {
+    width: 90%;
+    background-color: var(--color-skill-9);
+}
+
+.css, .BS, .WP, .fastapi {
+    width: 80%;
+    background-color: var(--color-skill-8);
+}
+
+.js, .Ajax, .php, .Nsql, .pgsql, .python, .node {
+    width: 70%;
+    background-color: var(--color-skill-7);
+}
+
+.React, .lar, .mule {
+    width: 60%;
+    background-color: var(--color-skill-6);
+}
+
+.Angular, .Vue {
+    width: 50%;
+    background-color: var(--color-skill-5);
+}
+
+.JQ, .Bubble {
+    width: 40%;
+    background-color: var(--color-skill-4);
+}
+
+.Ionic, .Low {
+    width: 30%;
+    background-color: var(--color-skill-3);
+}
+
+#haskills {
+    justify-content: space-between;
+}
 
 @media screen and (min-width: 1024px) {
 
@@ -393,52 +456,6 @@ h2, h3, h4, h5 {
         margin: 5px;
         border-radius: 15px;
         border: 1px solid var(--color-black);
-    }
-
-    .skills {
-        background-color: var(--color-light-green2);
-        color: var(--color-secondary);
-        width: 0%; /*To be set by Javascript */
-        padding: 5px 10px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        border-radius: 15px;
-    }
-
-    .html, .sql {
-        width: 90%;
-        background-color: var(--color-skill-9);
-    }
-
-    .css, .BS, .WP, .fastapi {
-        width: 80%;
-        background-color: var(--color-skill-8);
-    }
-
-    .js, .Ajax, .php, .Nsql, .pgsql, .python, .node {
-        width: 70%;
-        background-color: var(--color-skill-7);
-    }
-
-    .React, .lar, .mule {
-        width: 60%;
-        background-color: var(--color-skill-6);
-    }
-
-    .Angular, .Vue {
-        width: 50%;
-        background-color: var(--color-skill-5);
-    }
-
-    .JQ, .Bubble {
-        width: 40%;
-        background-color: var(--color-skill-4);
-    }
-
-    .Ionic, .Low {
-        width: 30%;
-        background-color: var(--color-skill-3);
     }
 
     #haskills {
